# CaptchaCracker

./: AGENTS.md  CLAUDE.md  download_captcha.py  requirements.txt  train_model.py
CaptchaCracker_v2_with_codex/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CaptchaCracker_v2_with_codex/documents/: getting_started.md
CaptchaCracker_v2_with_codex/scripts/: train.sh  validate.sh
CaptchaCracker_v2_with_codex/src/captcha_cracker_v2/: __init__.py  config.py  data_pipeline.py  model.py  predictions.py  train.py  validate.py
captcha_cracker_v2_with_claude/: CHANGELOG.md  FUTURE_IMPROVEMENTS.md  MIGRATION_GUIDE.md  README.md  REFACTORING_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
captcha_cracker_v2_with_claude/captcha_cracker/: __init__.py  config.py  exceptions.py  layers.py  model.py  preprocessing.py  trainer.py  utils.py
captcha_cracker_v2_with_claude/examples/: predict_batch.py  predict_single.py  train_model.py
captcha_cracker_v2_with_claude/tests/: conftest.py  test_model.py  test_utils.py
documents/: project_overview_ko.md
model/: weights_v2.h5
